# arc_pdf_tool

./: .dockerignore  .env.docker  .env.example  .env.mysql.example  .gitignore  API_COVERAGE.md  CASCADE_DELETE_FIX.md  CLIENT_UPDATE.md  DEPLOYMENT.md  Dockerfile.api  Dockerfile.base  Dockerfile.worker  HAGER_PARSER_FIX_SUMMARY.md  IMPLEMENTATION_PLAN.md  M2_COMPLETION_PLAN.md  M2_COMPLETION_SUMMARY.md  M2_FINAL_STATUS.md  M2_FINAL_VALIDATION.md  M2_REAL_TODO.md  MILESTONE_1_DEMO.md  Makefile  NEXT_STEPS_VALIDATION.md  PARSER_FIX_APPLIED.md  PROJECT_COMPLETION_ANALYSIS.md  README.md  README_FRONTEND.md  REQUIREMENTS_GAP_ANALYSIS.md  RUNNING_THE_UI.md  RUN_WEB_UI.md  TESTING_GUIDE.md  TEST_RESULTS.md  UNIVERSAL_PARSER_TEST_RESULTS.md  api_routes.py  app.py  config.py  debug_camelot.py  debug_select_page7.py  debug_table_structure.py  diff_engine.py  docker-compose.override.yml  (+32 more)
.github/: dependabot.yml
api/: auth.py  error_handlers.py  schemas.py
core/: database.py  diff_engine_v2.py  exceptions.py  observability.py  resilience.py  tasks.py
data/: pattern_cache.json
database/: manager.py  models.py
demo_results/: hager_parsing_results_20250927_013229.json  hager_parsing_results_20250927_015433.json  hager_products_20250927_015433.csv  sample_parsed_data.json  sample_products_export.csv  test_coverage_report.md
docs/: ACCURACY_TEST_PLAN.md  ADDING_NEW_MANUFACTURER.md  ALL_FIXES_SUMMARY.md  BASEROW.md  CLIENT_DELIVERABLES_CHECKLIST.md  CLIENT_UPDATE_M2.md  CONFIDENCE_BOOSTING_RESULTS.md  CONFIDENCE_BOOSTING_STRATEGY.md  CSS_FIX_INSTRUCTIONS.md  DATABASE_VALIDATION_SUMMARY.md  DATA_DICTIONARY.md  DATA_QUALITY_IMPROVEMENTS.md  DEPLOYMENT_GUIDE_FOR_CEO.md  DEPLOYMENT_RAILWAY_RENDER_VERCEL.md  DIFF.md  DOCKER_QUICKSTART.md  EXACT_PDF_FIX.md  FINAL_FIXES_SUMMARY.md  FIXES_APPLIED.md  FRONTEND_UI_COMPATIBILITY.md  HAGER_PARSER_ANALYSIS_SUMMARY.md  HAGER_PRICE_MATRIX_FORMAT.md  HYBRID_INTEGRATION_COMPLETE.md  INSTALL.md  LOCAL_ONLY_HYBRID_STRATEGY.md  M1_COMPLETION_PLAN.md  M1_QUICK_START.md  M1_VERIFICATION_REPORT.md  M2_ACCEPTANCE_REPORT.md  M2_CHECKLIST_STATUS.md  M2_QUICK_STATUS.md  M2_TESTABLE_ACCEPTANCE_CHECKLIST.md  M2_TODO_LIST.md  MULTI_MANUFACTURER_STRATEGY.md  MYSQL_DEPLOYMENT.md  OPERATIONS.md  PARSERS.md  PDF_ANALYSIS_ENHANCEMENT_GUIDE.md  PHASE1_COMPLETION_ROADMAP.md  PHASES_3-7_COMPLETE_SUMMARY.md  (+26 more)
exports_fixed/: select hinges_finishes_20251030_180307.csv  select hinges_options_20251030_180307.csv  select hinges_parsing_results_20251030_180307.json  select hinges_products_20251030_180307.csv
exports_hager_select/: select hinges_parsing_results_20251028_153502.json
exports_test_fixed/: select hinges_parsing_results_20251028_152607.json  select hinges_products_20251028_152607.csv
frontend/: .env.example  .env.local  README.md  next.config.js  package.json  tailwind.config.js  test-output.css  vercel.json
integrations/: baserow_client.py
migrations/: env.py
models/: baserow_syncs.py  diff_results.py
parsers/: __init__.py  base_parser.py  hager_parser.py  select_hinges_parser.py
proposals/: parser_improvements.md
schemas/: pricing_row.schema.json
scripts/: analyze_pdf_chunked.py  analyze_pdf_structure.py  analyze_price_pages.py  batch_test_all_pdfs.py  ci_performance_test.py  comprehensive_validation.py  debug_dataframes.py  deep_analyze_hager_tables.py  demo_complete.py  demo_milestone1.py  diagnose_hager_tables.py  diff_apply.py  measure_accuracy.py  milestone1_summary.py  parse_and_export.py  publish_baserow.py  quick_hybrid_test.py  quick_test_img2table.py  synthetic_diff_test.py  test_all_phases.py  test_data_quality_fix.py  test_db_integration.py  test_export_validation.py  test_extraction_debug.py  test_hager_quick.py  test_hybrid_approach.py  test_pattern_extractor.py  test_phase1_paddleocr.py  test_universal_parser.py  (+1 more)
(+103 files in other folders)
